--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -15,7 +15,7 @@
         }
 
         .sidebar {
-            width: 140px;
+            width: 215px;
             background-color: #cf3d74;
             height: 100vh;
             position: fixed;
@@ -70,6 +70,22 @@
         .sidebar nav ul li.active .submenu {
             display: block;
         }
+        .sidebar nav ul li .board:after {
+    content: ''; /* Remove the dropdown symbol */
+}
+/* Background color for active menu item */
+.sidebar nav ul li.active > a {
+    background-color: white;
+    color: #cf3d74; /* Change text color to contrast with white */
+}
+
+/* Background color for active submenu item */
+.sidebar nav ul li .submenu li.active > a {
+    background-color: pink;
+    color: #333; /* Change text color to contrast with pink */
+    border-left: 3px solid #333; /* Optional: add a vertical line */
+    padding-left: 7px; /* Adjust padding for the vertical line */
+}
 
         .sidebar nav ul li a:after {
             content: '\25BC';
@@ -77,6 +93,14 @@
             position: absolute;
             right: 10px;
         }
+        .sidebar nav ul li .submenu li a:hover, 
+.sidebar nav ul li .submenu li a.active {
+    background-color: pink; 
+    border-left: 3px solid #333; 
+    padding-left: 7px; 
+    transition: all 0.3s ease;
+}
+
 
         .sidebar nav ul li.active > a:after {
             content: '\25B2';
@@ -122,7 +146,7 @@
     justify-content: flex-end;
     align-items: center;
     background-color: #fff;
-    padding: 10px;
+    padding: 22px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -159,7 +183,7 @@ header .user-info img {
   color: #333;
   display: flex;
   align-items: center;
-  margin-right: 1050px;
+  margin-right: 1019px;
 }
 .name {
     font-size: 13px;
