--- a/demo/templates/manage_users.html
+++ b/demo/templates/manage_users.html
@@ -106,6 +106,16 @@
         .main-content header{
         width: 100%;
         }
+        .sidebar {
+  width: 168px;
+  background-color: #cf3d74;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 20px;
+  color: #fff;
+}
 
     </style>
     <!-- Include FontAwesome for icons -->
