--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -23,7 +23,7 @@
             margin-top: 65px;
         }
         h2 {
-            color: #000000;
+            color:white;
         }
         .form-group {
             margin-bottom: 15px;
@@ -111,6 +111,7 @@
         .new {
             color: grey;
         }
+        
     </style>
 </head>
 <body>
