--- a/demo/static/panel.css
+++ b/demo/static/panel.css
@@ -2,13 +2,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-image:url(images/0b87edb6-e786-4e37-a3b7-e21b41bcab53.jpeg);
+    background-repeat: no-repeat;
+    position: fixed;
     display: flex;
-    height: 100vh;
+    height: 500px;
 }
 
 .login-container {
-    width: 55%;
+    width: 58%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
@@ -17,8 +19,8 @@ body {
     margin-top: 177px;
     display: flex;
     justify-content: space-between;
-    height: 379px;
-    border-radius: 5px;
+    height: 400px;
+    border-radius: 5px; 
     
 }
 
@@ -26,9 +28,9 @@ form {
     width: 88%;
     max-width: 400px;
     margin: 0 auto;
-    margin-right: 61px;
-    
+    margin-right: 72px;
 }
+
 h2 {
     margin-bottom: -19px;
     color: black;
@@ -100,37 +102,13 @@ button {
     display: none;
     padding: 0px;
     position: absolute;
-}
-
-
-.background-shape-2 {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 68%;
-        height: 56%;
-        background-color: #9a1b69;
-        z-index: -1;
-        clip-path: polygon(100% 100%, 0 100%, 100% 0);
-
-}
-.background-shape {
-        position: absolute;
-        top: 300px;
-        left: 0;
-        width: 68%;
-        height: 56%;
-        background-color: #9a1b69;
-        z-index: -1;
-
-        }
-        
+}   
  .navbar {
         display: flex;
         justify-content: flex-start;
         align-items: center;
         background-color: white;
-        width: 164%;
+        width:172%;
         height: 69px;
         box-shadow:0 4px 8px rgba(82, 3, 58, 0.2);
         margin-bottom: 20px;
@@ -140,6 +118,7 @@ button {
 .navbar img {
     height: 40px; 
     margin-right: 15px; 
+    margin-left: 617px;
 }
 
 .navbar h1 {
