--- a/demo/templates/panel.html
+++ b/demo/templates/panel.html
@@ -8,31 +8,28 @@
 </head>
 <body>
     <div>
-
-    <nav class="navbar">
-        <img src="../static/images/logo-admin.png" alt="Administration Logo">
-        
-    </nav>
-    
-        
-<div class="login">
-    <div class="login-container">
-        <form id="login-form" method="POST">
-            <h2>Log in as an admin user</h2>
-            <div class="input-group">
-                <input type="text" id="username" name="username" placeholder="User Name">
-                <span class="error" id="username-error">Invalid user name</span>
+        <nav class="navbar">
+            <img src="../static/images/logo-admin.png" alt="Administration Logo">
+        </nav>
+        <div  >
+            <div class="login">
+                <div class="login-container">
+                    <form id="login-form" method="POST">
+                        <h2>Log in as an admin user</h2>
+                        <div class="input-group">
+                            <input type="text" id="username" name="username" placeholder="User Name">
+                            <span class="error" id="username-error">Invalid user name</span>
+                        </div>
+                        <div class="input-group">
+                            <input type="password" id="password" name="password" placeholder="Password">
+                            <span class="error" id="password-error">Invalid password</span>
+                        </div>
+                        <button type="submit" class="Login">Log in</button>
+                    </form>
+                </div>
             </div>
-            <div class="input-group">
-                <input type="password" id="password" name="password" placeholder="Password">
-                <span class="error" id="password-error">Invalid password</span>
-            </div>
-            <button type="submit" class="Login">Log in</button>
-        </form>
+        </div>
     </div>
-
-</div>
-</div>
     
     <script>
         document.getElementById('login-form').addEventListener('submit', function(event) {
@@ -65,6 +62,3 @@
     </script>
 </body>
 </html>
-
-
-
