--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -111,6 +111,15 @@
         .new {
             color: grey;
         }
+        .user2{
+            width: 169px !important;
+  height: 31px !important;
+  margin-left: -94px !important;
+  padding-left: 64px !important;
+        }
+        .board{
+            width: 207px;
+        }
         
     </style>
 </head>
@@ -219,7 +228,7 @@
                 document.getElementById("confirm-password-error").style.display = "block";
             }
 
-            // Prevent form submission if validation fails
+            
             if (!isValid) {
                 event.preventDefault();
             }
