--- a/demo/static/layout1.css
+++ b/demo/static/layout1.css
@@ -3,10 +3,12 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background-color: pink;
+}
 
 .max {
-    color: black;
-    
+    color: black; 
 }
 
 .min {
@@ -38,7 +40,6 @@ border-right: 1px solid #80808036;
 .nav-item a {
 font-size: 14px;
 }
-
 /* Common styles for navbar */
 .navbar {
 display: flex;
@@ -121,6 +122,6 @@ background-color: #e9ecef;
     margin-left: -39px;
     margin-top: 19px;
 }
-.a{
-    margin-left: -2px;
+.sidebar{
+    width: 216px;
 }
