--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -112,13 +112,14 @@
             color: grey;
         }
         .user2{
-            width: 169px !important;
+            width: 149px !important;
   height: 31px !important;
   margin-left: -94px !important;
   padding-left: 64px !important;
         }
         .board{
-            width: 207px;
+            width: 218px;
+            height: 30px;
         }
         
     </style>
