--- a/demo/templates/manage_users.html
+++ b/demo/templates/manage_users.html
@@ -107,7 +107,7 @@
         width: 100%;
         }
         .sidebar {
-  width: 168px;
+  width: 180px;
   background-color: #cf3d74;
   height: 100vh;
   position: fixed;
@@ -118,14 +118,15 @@
 }
 .user1{
     height: 30px !important;
-  width: 202px;
+  width: 220px;
 
 }
 .user2{
-    width: 159px !important;
+    width: 151px !important;
 }
 .board{
-            width: 197px;
+    width: 220px;
+    height: 32px;
         }
         
     </style>
