--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -135,8 +135,8 @@
   list-style-type: none;
   padding: 46px 0;
   top: 26px !important;
-  left: -198px !important;
-  width: 204%;
+  left: -172px !important;
+  
   width: 150px;
 }
 
@@ -227,9 +227,7 @@ header .user-info img {
   transition: background-color 0.3s ease;
 
 }
-.board:hover {
-    
-}
+
 
 .board:active {
     
@@ -247,7 +245,15 @@ header .user-info img {
     transition: all 0.3s ease;
     vertical-align: middle;
 }
-
+.name2{
+    margin-left: 55px;
+}
+.Profile1{
+    height: 0px;
+}
+.loger{
+    height: 0px;
+}
 
 
     </style>
@@ -255,7 +261,7 @@ header .user-info img {
 <body>
     <div class="sidebar">
         <div class="logo">
-            <h2>Nschool</h2>
+        <h2>Booking</h2>
         </div>
         <nav>
             <ul>
@@ -345,6 +351,8 @@ header .user-info img {
                       <li><a href="#" class="loger1" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                   </ul>
               </div>
+              
+          </div>
           </div>
       </header>
   </div>
