--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -205,17 +205,17 @@
                 <div class="form-row">
                     <div class="input-container">
                         <input type="text" id="name" placeholder="Name">
-                        <span class="error" id="name-error">Invalid user name</span>
+                        <span class="error" id="name-error">Please enter the name</span>
                     </div>
                     <div class="input-container">
                         <input type="email" id="email" placeholder="E-Mail ID">
-                        <span class="error" id="email-error">Invalid email</span>
+                        <span class="error" id="email-error"> Please enter the valid email</span>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="input-container">
                         <input type="text" id="contact" placeholder="Contact No.">
-                        <span class="error" id="contact-error">Contact number must be exactly 10 digits</span>
+                        <span class="error" id="contact-error">Contact number must contain 10 digits</span>
                     </div>
                     <div class="input-container">
                         <input type="text" id="designation" placeholder="Designation">
@@ -225,11 +225,11 @@
                 <div class="form-row">
                     <div class="input-container">
                         <input type="password" id="password" placeholder="Password">
-                        <span class="error" id="password-error">Invalid password</span>
+                        <span class="error" id="password-error">Password field is required</span>
                     </div>
                     <div class="input-container">
                         <input type="password" id="confirm-password" placeholder="Confirm Password">
-                        <span class="error" id="confirm-password-error">Passwords do not match</span>
+                        <span class="error" id="confirm-password-error">Password does not match</span>
                     </div>
                 </div>
                 <div class="btn-group">
