--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -246,12 +246,18 @@ header .user-info img {
     vertical-align: middle;
 }
 .name2{
-    margin-left: 55px;
+   
+    display: flex;
+    flex-direction: column;
+    margin-left: 67px; 
+    margin-bottom: 20px;/* Adjust this value as needed */
 }
+
+
 .Profile1{
     height: 0px;
 }
-.loger{
+.loger1{
     height: 0px;
 }
 
@@ -340,7 +346,7 @@ header .user-info img {
               <i class="fas fa-chevron-down profile-arrow"></i>
               <div class="profile-dropdown">
                   <ul class="dropdown-menu">
-                    <div class="user-info2" id="user-info">
+                    <div class="user-info2" id="user-info2">
                         <img src="../static/images/profile.jpg" alt="User Profile">
                         <span class="name2">
                             <span style="font-weight: bold;">User Name</span><br>
